--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SALEBOT_API_KEY="3572f4a954fe6a709a763abfc20cf160"
 MONGO_URI="mongodb+srv://tovkessler:6VeAi43Z9YNDssq3@cluster0.hv4yy.mongodb.net/ReelsRashBot"
-SERVER_URL="https://reelsrash-tov-kessler.amvera.io"
+SERVER_URL="https://betsy-bot-tov-kessler.amvera.io"
