--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SALEBOT_API_KEY="b53c2be86e5bff13f8e30de1fe0d697b"
 MONGO_URI="mongodb+srv://tovkessler:6VeAi43Z9YNDssq3@cluster0.hv4yy.mongodb.net/BetsyBot?retryWrites=true&w=majority"
-SERVER_URL="https://betsy-bot-keddo.amvera.io"
+SERVER_URL="'https://betsy-bot-keddo.amvera.io"
+
+PORT=3000
