--- a/package.json
+++ b/package.json
@@ -1,48 +1,26 @@
 {
-  "name": "@betsy/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
-  "private": true,
-  "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@nx/eslint": "21.6.5",
-    "@nx/eslint-plugin": "21.6.5",
-    "@nx/express": "^21.6.5",
-    "@nx/js": "21.6.5",
-    "@nx/node": "21.6.5",
-    "@nx/web": "21.6.5",
-    "@nx/webpack": "21.6.5",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
-    "@types/express": "^4.17.23",
-    "@types/node": "20.19.9",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^10.0.0",
-    "nx": "21.6.5",
-    "prettier": "^2.6.2",
-    "react-refresh": "^0.10.0",
-    "tslib": "^2.3.0",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.40.0",
-    "webpack-cli": "^5.1.4"
+  "name": "reels-parser",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "workspaces": [
-    "packages/*",
-    "api",
-    "api-e2e"
-  ],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "apify-client": "^2.18.0",
-    "axios": "^1.6.0",
-    "csv-stringify": "^6.6.0",
+    "apify": "^3.3.2",
+    "apify-client": "^2.12.0",
+    "axios": "^1.8.2",
+    "body-parser": "^1.20.3",
+    "csv-stringify": "^6.5.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "import": "^0.0.6",
     "log4js": "^6.9.1",
     "moment": "^2.30.1",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.12.1",
+    "nodemon": "^3.1.9"
   }
 }
