--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SALEBOT_API_KEY="8fd582de6049da9547ecba5fbda1a712"
 MONGO_URI="mongodb+srv://tovkessler:6VeAi43Z9YNDssq3@cluster0.hv4yy.mongodb.net/BetsyBot?retryWrites=true&w=majority"
-SERVER_URL="'https://betsy-bot-keddo.amvera.io"
+SERVER_URL="https://betsy-bot-keddo.amvera.io"
 
-PORT=3000
+PORT=3006
